--- a/templates/commits.html
+++ b/templates/commits.html
@@ -7,10 +7,9 @@ $code:
 <h2>$data[0]["project_name"]</h2>
 
 $for i in range(x):
-	<div id='single_commit'>
+	<div>
 		<b>commit: </b> $data[i]["commit_title"]
 		<b>date: </b> $data[i]["date"] <br>
 		<b>markdown: </b> $data[i]["markdown"]
 	</div>
 	<br>
-
